# kai-security

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  combine_exploits.py  main.py  pyproject.toml  pytest.ini  railway.json  run_scaffold.py  scroll_threat_context.yaml  test_bountybench.py  test_scaffold.py  viewer.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  engine.py  fixer_utils.py  generator_tools.py  generator_utils.py  model.py  report_generator.py  schemas.py  settings.py  system_prompt.txt  tools.py  utils.py  verifier.py
agent/agents/: __init__.py  finder_agent.py  fixer_agent.py  generator_agent.py  setup_agent.py
agent/prompts/: finder_agent_prompt.txt  finder_subagent_prompt.txt  fixer_agent_prompt.txt  generator_subagent_prompt.txt  non_duplicate_verifier_prompt.txt  setup_agent_prompt.txt  test_generator_prompt.txt
benchmark/: README.md  analyse_costs.py  benchmark_models.py  extract_metrics.py
config/: settings.py
dockers/: docker-compose.yml  loki-config.yaml  otel-collector-config.yaml
docs/: adapters.md  cybergym-r15-bootstrap-fix-2026-05-23.md  open-source-hygiene.md  overnight-results-2026-05-15.md  pr-95-reviewer-guide.md  r37-results-2026-05-25.md  railway-deploy.md
evaluation/: README.md  __init__.py  __main__.py  cli.py  cybergym_bugmatch.py  cybergym_check.py  cybergym_eval.py  cybergym_recheck.py  cybergym_verify.py  eta.py  eval_blackbox.sh  evaluator.py  judge.py  metrics_collector.py  post_hoc_deduplicator.py  runner.py  schemas.py  store.py  trace_viewer.py  worker.py
examples/: README.md
kai/: __init__.py  inference.py  schemas.py  state_manager.py
logger/: __init__.py  mongo_adapter.py  mongo_logger.py  setup_logger.py
observability/: logger.py
scripts/: analyze_run.py  batch_cantina_runner.py  bootstrap_railway_env.py  cybergym_verify.py  enqueue_smoke.py  extract_verified_exploits.py  generate_fixer_report.py  generate_generator_report.py  install.sh  morning_report.sh  playground_dispatcher.py  pull_rollouts.sh  pull_rollouts_per_replica.sh  run_all_configs.sh  snapshot_railway_env.py  watch_run.py
tests/: test_adapter_chooser_multilang_detection.py  test_blackbox_process.py  test_builders.py  test_chain_assembler.py  test_cli.py  test_config_env_kwargs.py  test_critic.py  test_cvss.py  test_cybergym_cancel_decouple.py  test_cybergym_chain_assembler.py  test_cybergym_harness_tool.py  test_cybergym_post_pipeline_critic.py  test_cybergym_post_pipeline_fixer.py  test_cybergym_soft_verified.py  test_cybergym_verifier_gate.py  test_definitions.py  test_dependency.py  test_dependency_builder.py  test_domain_adapters.py  test_exploits_proxy.py  test_fixer_agent.py  test_fixer_spawn_wrapper.py  test_framework_detection.py  test_integration.py  test_invariant_synthesizer_process.py  test_local_repl_factory.py  test_log_file_printers.py  test_main.py  test_model_config.py  test_model_repl.py  test_openai_retry.py  test_openrouter_headers.py  test_parsers_cvss.py  test_parsing.py  test_path_isolation.py  test_poc_auditor.py  test_processes_adapter_chooser.py  test_processes_envsetup.py  test_processes_profiler.py  test_processes_workspace_validation.py  (+15 more)
(+390 files in other folders)
