[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exploit-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.109.1",
    "pathspec>=0.12.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "vllm>=0.5.5; sys_platform != 'darwin'",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]

[tool.setuptools.packages.find]
include = ["agent*", "logger*"]
