[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "kai"
version = "0.1.0"
description = "Automated vulnerability discovery, verification, and patching using recursive language models."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "FirstBatch" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "openai>=1.109.1",
    "pathspec>=0.12.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.11.0",
    "rich>=14.2.0",
    "pyyaml>=6.0",
    "tree-sitter-solidity>=1.2.13",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "json-repair>=0.58.0",
    "eth-account>=0.13.7",
]

[project.urls]
Homepage = "https://github.com/firstbatch/exploit-agent"
Repository = "https://github.com/firstbatch/exploit-agent"
Issues = "https://github.com/firstbatch/exploit-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "ty>=0.0.14",
]
